--- a/app/src/main/res/layout/content_shopping_cart.xml
+++ b/app/src/main/res/layout/content_shopping_cart.xml
@@ -27,13 +27,12 @@
                 android:layout_margin="5dp"
                 android:clickable="true"
                 android:stateListAnimator="@anim/card_raise"
-                card_view:cardCornerRadius="10dp"
+
                 card_view:cardElevation="@dimen/card_idle">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="#2200ff"
                     android:padding="5dp">
 
                     <TextView
@@ -51,7 +50,7 @@
                 android:layout_margin="5dp"
                 android:clickable="true"
                 android:stateListAnimator="@anim/card_raise"
-                card_view:cardCornerRadius="10dp"
+
                 card_view:cardElevation="@dimen/card_idle">
 
                 <RelativeLayout
@@ -85,13 +84,12 @@
             android:layout_margin="5dp"
             android:clickable="true"
             android:stateListAnimator="@anim/card_raise"
-            card_view:cardCornerRadius="10dp"
+
             card_view:cardElevation="@dimen/card_idle">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#2200ff"
                 android:padding="5dp">
 
                 <RelativeLayout
@@ -105,6 +103,7 @@
                         android:textAppearance="?android:attr/textAppearanceLarge" />
 
                     <TextView
+                        android:id="@+id/textTotalAmount"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
