--- a/app/src/main/res/layout/order_list.xml
+++ b/app/src/main/res/layout/order_list.xml
@@ -7,10 +7,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#de4917"
         android:padding="10dp">
 
         <TextView
+            android:id="@+id/textQuantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2" />
@@ -21,13 +21,13 @@
             android:text=" X " />
 
         <TextView
-            android:id="@+id/name"
+            android:id="@+id/textDishName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="DISH NAME" />
 
         <TextView
-            android:id="@+id/price"
+            android:id="@+id/textPrice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="right"
